apps/base/kubevirt-manager/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-manager
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: 1.5.2
    pod-security.kubernetes.io/enforce: "privileged"
