apps/base/kubevirt-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: 1.5.2
  annotations:
spec:
  ingressClassName: tailscale
  tls:
   - hosts:
     - kubevirt-manager
  rules:
  - host: kubevirt-manager
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
